test/should_fail/cast_008.grg
using attrib_model_001, enum_model_001;

rule r {
	pattern {
		x: A;
	}
	modify {
		eval {
			x.e = (NINT) x.e;
		}
	}
}
